force-app/main/default/objects/CBK_FlexQueueMonitor__c/CBK_FlexQueueMonitor__c.object-meta.xml
<CustomObject>
    <description>Objeto cusotm para la monitorización asociado a la gestión de la FlexQueue.</description>
    <label>FlexQueue Monitor</label>
    <nameField>
        <displayFormat>FQ-{000000000}</displayFormat>
        <label>FlexQueue Monitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FlexQueue Monitor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>