force-app/main/default/objects/CBK_FlexQueueMonitor__c/fields/CBK_Aplicacion__c.field-meta.xml
<CustomField>
    <fullName>CBK_Aplicacion__c</fullName>
    <description>Nombre de aplicación desde que se invoca la funcionalidad batchs monitorizadas en la flexqueue</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Aplicación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>