force-app/main/default/objects/CBK_FlexQueueMonitor__c/fields/CBK_HoldingBatches__c.field-meta.xml
<CustomField>
    <fullName>CBK_HoldingBatches__c</fullName>
    <description>Numero de batches que se encontraban en espera en el momento de ejecución del proceso de monitorización.</description>
    <label>Numero de batches en cola</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>