force-app/main/default/objects/CBK_FlexQueueMonitor__c/fields/CBK_NotificacionRealizada__c.field-meta.xml
<CustomField>
    <fullName>CBK_NotificacionRealizada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador donde se registra si para la entrada de monitorización la notificación en caso de ser necesaria se ha realizado o no (por no superar el intervalo mínimo de notificación).</description>
    <label>Notificación realizada</label>
    <type>Checkbox</type>
</CustomField>